...
    }
  }, [selectedWord, reanalyzeWord])

  return (
    <>
      <ViewThemed
        testID="screen-history"
        style={[
          styles.container,
          {
            paddingTop: insets.top,
          },
        ]}
...
