...
    ).length,
    streakDays: calculateStreak(validWords),
  }

  return (
    <ViewThemed
      testID="screen-collections"
      style={[
        styles.container,
        {
          paddingTop: insets.top,
        },
      ]}
...
